# SafeWallet-fork

./: .gitignore  .snyk  AUDIT_SCALABILITY_DEEP_DIVE.md  AUDIT_V2_REPORT.md  CHANGELOG_FIX.md  CHANGELOG_V2.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_ANALYSIS_REPORT.md  CONTRIBUTING.md  JOURNAL_ARTIKEL.md  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  bigupdatev3.md  buildntest.gagal.md  middleware.ts  next.config.ts  package-lock.json  package.json  permasalahan.md  sentry.server.config.ts  tsconfig.json  update v2.md  vercel.json
.github/: dependabot.yml
.github/workflows/: v3_pipeline.yml
public/: manifest.json
scripts/: check_snyk_auth.bat
security scanning/: security scanning.md
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: analytics.tsx  circular-gallery.tsx  dashboard-layout-shell.tsx  flowing-menu.tsx  gsap-aurora.tsx  gsap-data-wave.tsx  language-provider.tsx  lenis-provider.tsx  light-rays.tsx  scroll-velocity.tsx  security-disclosure.tsx  skeletons.tsx  theme-toggle.tsx
src/i18n/: index.ts  server.ts
src/lib/: audit-logger.ts  blockchain.ts  coaching.ts  encryption.ts  file-parser.ts  gamification.ts  rate-limit.ts  sanitize.ts
src/test/: sanitize.test.ts
src/types/: api.ts  database.ts
supabase/migrations/: 001_initial_schema.sql  002_add_telegram_linking.sql  (+4 more)
test/: xlsx_security.test.ts
v3/: INCIDENT_RESPONSE_PLAN.md  README_V3.md  SECURITY_AUDIT_COMPLIANCE.md  database_v3.sql
v3/security-rust/: Cargo.toml
v3/security-rust/src/: main.rs
(+64 files in other folders)
